[package]
name = "pdf_form"
version = "0.3.0"
authors = ["Jake <jsandler18@gmail.com>", "Malte <voos.malte@gmail.com>", "Emulator000 <emulator@hotmail.it>"]
readme = "README.md"
keywords = ["pdf", "form"]
description = "A library for programatically filling out pdf forms"
license = "MIT"
edition = "2018"

[dependencies]
bitflags = "^1.2"
derive-error = "^0.0.4"
lopdf = "^0.25"
